--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 			<li class="visible">
 				<div>
 					<h2>Anuar Zhuken</h2>
-					<p>Web Developer you were looking for</p>
+					<p>Web Developer</p>
 					<!-- <img src="./img/anuar.jpg" class="avatar" alt="anuar pic"> -->
 					<a href="">
 						<img src="./img/linkedin.png" alt="linkedin">
@@ -32,37 +32,37 @@
 				<div>
 					<h2>N Queens</h2>
 					<p>Visualization of bitwise solution.</p>
-					<div class="effect1" style="position: relative; background-color: #ffffff; 
-					margin: 0 auto; width: 80%;	height: 400px; border-radius: 5px; text-align: justify">
+					<div class="effect1 card">
 					
-						<div style="position: relative; text-align: -webkit-auto; width: 50%; text-align: center; display: inline-block;">
+						<div class="part left">
 							<span>
 								<span class="input-number-decrement">–</span>
 								<input class="input-number" id="num" type="text" value="1" min="0" max="10"/ >
 								<span class="input-number-increment">+</span>
-								<a class='cd-btn' id='startButton'>Start Game</a>
+								<a class='cd-btn' id='startButton'>Start</a>
 							</span>
 							<div id="board">
 								<img class="placeholder" src="./img/queen.png" alt="">
 							</div>
 						</div>
 						
-						<div style="display: inline-block; width: 40%; opacity: 0.65; height: 100%; 
-							position: absolute; top: 0;">
+						<div class="part right">
+							<h2>Legend</h2>
 							<ul>
 								<li>
 									<div class='circle' style="background-color: orange"></div> Minor Diagonal
 								</li>
 								<li>
-									<div class='circle' style="background-color: black"></div> Major Diagonal
+									<div class='circle' style="background-color: green"></div> Major Diagonal
 								</li>
 								<li>
 									<div class='circle' style="background-color: red"></div> Column
 								</li>
 							</ul>
-							<img class="technology" src="./img/d3.jpeg" alt="">
-							<img class="technology" src="./img/js.jpeg" alt="">
-							<img class="technology" src="./img/webpack.jpeg" alt="">
+							<h2>Technologies</h2>
+							<img class="technology" src="./img/d3.png" alt="">
+							<img class="technology" src="./img/js.png" alt="">
+							<img class="technology" src="./img/webpack.svg" alt="">
 						</div>
 					</div>
 			</div>
@@ -74,7 +74,9 @@
 	<div>
 		<h2>Find an odd ball</h2>
 		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae, distinctio!.</p>
-		<a href="http://codyhouse.co/?p=854" class="cd-btn">Learn more</a>
+		<div class="effect1" style="position: relative; background-color: #ffffff; 
+							margin: 0 auto; width: 80%;	height: 400px; border-radius: 5px; text-align: justify">
+		</div>
 	</div>
 </li>
 
@@ -82,16 +84,20 @@
 	<div>
 		<h2>Battle bread</h2>
 		<p>Lorem ipsum dolor sit amet.</p>
-		<div class='vis'></div>
+		<div class="effect1" style="position: relative; background-color: #ffffff; 
+									margin: 0 auto; width: 80%;	height: 400px; border-radius: 5px; text-align: justify">
+		
+			<div class='vis'></div>
+		</div>
 	</div>
 </li>
 </ul> <!-- .cd-slider -->
 
 <ol class="cd-slider-navigation">
-	<li class="selected"><a href="#0"><em>Item 1</em></a></li>
-	<li><a href="#0"><em>Item 2</em></a></li>
-	<li><a href="#0"><em>Item 3</em></a></li>
-	<li><a href="#0"><em>Item 4</em></a></li>
+	<li class="selected"><a href="#0"><em>Home</em></a></li>
+	<li><a href="#0"><em>N Queens</em></a></li>
+	<li><a href="#0"><em>Odd ball</em></a></li>
+	<li><a href="#0"><em>Battle bread</em></a></li>
 </ol> <!-- .cd-slider-navigation -->
 
 <div class="cd-svg-cover" data-step1="M1402,800h-2V0.6c0-0.3,0-0.3,0-0.6h2v294V800z" data-step2="M1400,800H383L770.7,0.6c0.2-0.3,0.5-0.6,0.9-0.6H1400v294V800z" data-step3="M1400,800H0V0.6C0,0.4,0,0.3,0,0h1400v294V800z" data-step4="M615,800H0V0.6C0,0.4,0,0.3,0,0h615L393,312L615,800z" data-step5="M0,800h-2V0.6C-2,0.4-2,0.3-2,0h2v312V800z" data-step6="M-2,800h2L0,0.6C0,0.3,0,0.3,0,0l-2,0v294V800z" data-step7="M0,800h1017L629.3,0.6c-0.2-0.3-0.5-0.6-0.9-0.6L0,0l0,294L0,800z" data-step8="M0,800h1400V0.6c0-0.2,0-0.3,0-0.6L0,0l0,294L0,800z" data-step9="M785,800h615V0.6c0-0.2,0-0.3,0-0.6L785,0l222,312L785,800z" data-step10="M1400,800h2V0.6c0-0.2,0-0.3,0-0.6l-2,0v312V800z">
@@ -151,39 +157,54 @@
 	inputNumber($('.input-number'));
 </script>
 <script>
-	    const svg = d3.select(".vis").append("svg").attr("width", this.state.width + this.state.margin.left + this.state.margin.right)
-				.attr("height", this.state.height + this.state.margin.top + this.state.margin.bottom)
-				.style("position", 'absolute')
-				.style("margin-left", this.state.margin.left + "px")
-				.style("z-index", "100")
-				.append("g")
-				.attr("transform", `translate(${this.state.margin.left}, ${this.state.margin.top})`)
+	const dimensions = {
+		width: 400,
+		height: 400,
+		margin: {
+			left: 20,
+			right: 20,
+			top: 20
+		},
+	}
+	const visboard = {
 
-			if (this.props.visboard) {
-				var x = d3.scaleBand()
-					.domain(d3.range(this.props.visboard.length))
-					.range([0, this.state.width]);
+	}
 
-				var y = d3.scaleBand()
-					.domain(d3.range(this.props.visboard.length))
-					.range([0, this.state.height]);
+	const svg = d3.select(".vis").append("svg")
+			.attr("width", dimensions.width + dimensions.margin.left + dimensions.margin.right)
+			.attr("height", dimensions.height + dimensions.margin.top + dimensions.margin.bottom)
+			.style("position", 'absolute')
+			.style("margin-left", dimensions.margin.left + "px")
+			.style("z-index", "100")
+			.append("g")
+			.attr("transform", `translate(${dimensions.margin.left}, ${dimensions.margin.top})`)
 
-				var color = d3.scaleSequential(d3.interpolateBlues)
-					.domain([0, 26]);
+		if (visboard) {
+			var x = d3.scaleBand()
+				.domain(d3.range(visboard.length))
+				.range([0, dimensions.width]);
 
-				var row = svg.selectAll(".row")
-					.data(this.props.visboard)
-					.enter().append("g")
-					.attr("class", "row")
-					.attr("transform", (d, i) => `translate(0,${y(i)})`);
-				row.selectAll(".cell")
-					.data(d => d)
-					.enter().append("rect")
-					.attr("x", (d, i) => x(i))
-					.attr("width", x.bandwidth())
-					.attr("height", y.bandwidth())
-					.style("fill", d => color(d))
-					.style("fill-opacity", '0.7')
+			var y = d3.scaleBand()
+				.domain(d3.range(visboard.length))
+				.range([0, dimensions.height]);
+
+			var color = d3.scaleSequential(d3.interpolateBlues)
+				.domain([0, 26]);
+
+			var row = svg.selectAll(".row")
+				.data(visboard)
+				.enter().append("g")
+				.attr("class", "row")
+				.attr("transform", (d, i) => `translate(0,${y(i)})`);
+
+			row.selectAll(".cell")
+				.data(d => d)
+				.enter().append("rect")
+				.attr("x", (d, i) => x(i))
+				.attr("width", x.bandwidth())
+				.attr("height", y.bandwidth())
+				.style("fill", d => color(d))
+				.style("fill-opacity", '0.7');
 </script>
 </body>
 </html>
