--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 	<link rel="stylesheet" href="css/reset.css"> <!-- CSS reset -->
 	<link rel="stylesheet" href="css/style.css"> <!-- Resource style -->
 	<script src="js/modernizr.js"></script> <!-- Modernizr -->
-	
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.4/lodash.min.js"></script>
+
 	<title>Anuar Zhuken</title>
 </head>
 <body>
@@ -83,11 +84,33 @@
 <li>
 	<div>
 		<h2>Battle bread</h2>
-		<p>Lorem ipsum dolor sit amet.</p>
-		<div class="effect1" style="position: relative; background-color: #ffffff; 
-									margin: 0 auto; width: 80%;	height: 400px; border-radius: 5px; text-align: justify">
-		
-			<div class='vis'></div>
+		<p>Algorithm and visuals to efficiently find battle ships.</p>
+		<div class="effect1 card">
+			<div class="part left">
+				<div class='vis' style="position: absolute"></div>
+			</div>
+			
+			<div class="part right">
+				<h2>Ingredients</h2>
+				<ul>
+					<li>
+						Butter
+					</li>
+					<li>
+						Bread
+					</li>
+					<li>
+						Secret souce
+					</li>
+				</ul>
+				<h2>Technologies</h2>
+				<img class="technology" src="./img/d3.png" alt="">
+				<img class="technology" src="./img/js.png" alt="">
+				<img class="technology" src="./img/webpack.svg" alt="">
+				<img class="technology" src="./img/react.svg" alt="">
+				<img class="technology" src="./img/redux.png" alt="">
+			</div>
+			
 		</div>
 	</div>
 </li>
@@ -111,8 +134,9 @@
 <script src="js/jquery-2.1.4.js"></script>
 <script src="js/snap.svg-min.js"></script>
 <script src="js/main.js"></script> <!-- Resource jQuery -->
-<script src="https://d3js.org/d3.v4.min.js"></script><!--  D3 -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.2.2/d3.min.js"></script><!--  D3 -->
 <script src="projects/nQueens/nqueens.js"></script>
+<script src="projects/battleBread/ai.js"></script>
 <script>
 	(function () {
 		
@@ -158,53 +182,68 @@
 </script>
 <script>
 	const dimensions = {
-		width: 400,
-		height: 400,
+		width: 300,
+		height: 300,
 		margin: {
 			left: 20,
 			right: 20,
-			top: 20
+			top: 20,
+			bottom: 20,
 		},
 	}
-	const visboard = {
+	let visboard = [
+		[0,0,0,0,0,0,0,0],
+		[0,0,0,0,0,0,0,0],
+		[0,0,0,0,0,0,0,0],
+		[0,0,0,0,0,0,0,0],
+		[0,0,0,0,0,0,0,0],
+		[0,0,0,0,0,0,0,0],
+		[0,0,0,0,0,0,0,0],
+		[0,0,0,0,0,0,0,0]
+	]
 
+	window.drawHitMap = () => {
+
+		const svg = d3.select(".vis").append("svg")
+				.attr("width", dimensions.width + dimensions.margin.left + dimensions.margin.right)
+				.attr("height", dimensions.height + dimensions.margin.top + dimensions.margin.bottom)
+				.style("position", 'absolute')
+				.style("margin-left", dimensions.margin.left + "px")
+				.style("z-index", "100")
+				.append("g")
+				.attr("transform", `translate(${dimensions.margin.left}, ${dimensions.margin.top})`)
+	
+			if (visboard) {
+				var x = d3.scaleBand()
+					.domain(d3.range(visboard.length))
+					.range([0, dimensions.width]);
+	
+				var y = d3.scaleBand()
+					.domain(d3.range(visboard.length))
+					.range([0, dimensions.height]);
+	
+				var color = d3.scaleSequential(d3.interpolateRainbow)
+					.domain([0, 26]);
+	
+				var row = svg.selectAll(".row")
+					.data(visboard)
+					.enter().append("g")
+					.attr("class", "row")
+					.attr("transform", (d, i) => `translate(0,${y(i)})`);
+	
+				row.selectAll(".cell")
+					.data(d => d)
+					.enter().append("rect")
+					.attr("x", (d, i) => x(i))
+					.attr("width", x.bandwidth())
+					.attr("height", y.bandwidth())
+					.style("fill", d => color(d))
+					// .style("fill-opacity", '0.7');
+			}
 	}
 
-	const svg = d3.select(".vis").append("svg")
-			.attr("width", dimensions.width + dimensions.margin.left + dimensions.margin.right)
-			.attr("height", dimensions.height + dimensions.margin.top + dimensions.margin.bottom)
-			.style("position", 'absolute')
-			.style("margin-left", dimensions.margin.left + "px")
-			.style("z-index", "100")
-			.append("g")
-			.attr("transform", `translate(${dimensions.margin.left}, ${dimensions.margin.top})`)
 
-		if (visboard) {
-			var x = d3.scaleBand()
-				.domain(d3.range(visboard.length))
-				.range([0, dimensions.width]);
-
-			var y = d3.scaleBand()
-				.domain(d3.range(visboard.length))
-				.range([0, dimensions.height]);
-
-			var color = d3.scaleSequential(d3.interpolateBlues)
-				.domain([0, 26]);
-
-			var row = svg.selectAll(".row")
-				.data(visboard)
-				.enter().append("g")
-				.attr("class", "row")
-				.attr("transform", (d, i) => `translate(0,${y(i)})`);
-
-			row.selectAll(".cell")
-				.data(d => d)
-				.enter().append("rect")
-				.attr("x", (d, i) => x(i))
-				.attr("width", x.bandwidth())
-				.attr("height", y.bandwidth())
-				.style("fill", d => color(d))
-				.style("fill-opacity", '0.7');
+	window.visboard = visboard;
 </script>
 </body>
 </html>
