--- a/index.html
+++ b/index.html
@@ -21,8 +21,10 @@
 					<h2>Anuar Zhuken</h2>
 					<p>Web Developer</p>
 					<!-- <img src="./img/anuar.jpg" class="avatar" alt="anuar pic"> -->
-					<a href="">
+					<a target="_blank" href="https://www.linkedin.com/in/anuarzhukenov/">
 						<img src="./img/linkedin.png" alt="linkedin">
+					</a>
+					<a target="_blank" href="https://github.com/codalife">
 						<img src="./img/github.png" alt="linkedin">
 					</a>
 					
@@ -83,19 +85,21 @@
 
 <li>
 	<div>
-		<h2>Battle bread</h2>
-		<p>Algorithm and visuals to efficiently find battle ships.</p>
+		<h2>Battle ship</h2>
+		<p>Algorithm and visuals to efficiently find ships.</p>
 		<div class="effect1 card">
 			<div class="part left">
 				<button class="cd-btn" id="playHeatMap">Calculate</button>
 				<button class="cd-btn" id="Refresh">Refresh</button>
-				<div class='vis' style="position: absolute"></div>
+				<div class='vis'></div>
 			</div>
 			<!-- ******************************* Place ships                   *********************************************** -->
 			<div class="part right">
 				<h2>Legend</h2>
 				<span style="float: left">Low probability</span><span style="float: right">High probability</span>
+				<br></br>
 				<img class="interpolate" src="./img/plazma.png" alt="">
+				<br></br>
 				<h2>Technologies</h2>
 				<img class="technology" src="./img/d3.png" alt="">
 				<img class="technology" src="./img/js.png" alt="">
