refactor to class odd ball

--- a/index.html
+++ b/index.html
@@ -93,7 +93,6 @@
 			</div>
 			<!-- ******************************* Place ships                   *********************************************** -->
 			<div class="part right">
-				<h2>Technologies</h2>
 				<img class="technology" src="./img/d3.png" alt="">
 				<img class="technology" src="./img/js.png" alt="">
 			</div>
@@ -107,6 +106,7 @@
 		<p>Algorithm and visuals to efficiently find ships.</p>
 		<div class="effect1 card">
 			<div class="part left">
+				<div class="bkg"></div>
 				<div>
 					<button class="cd-btn" id="playHeatMap">Calculate</button>
 					<button class="cd-btn" id="Refresh">Refresh</button>
@@ -115,12 +115,10 @@
 			</div>
 			<!-- ******************************* Place ships                   *********************************************** -->
 			<div class="part right">
-				<h2>Legend</h2>
 				<span style="float: left">Low probability</span><span style="float: right">High probability</span>
 				<br></br>
 				<img class="interpolate" src="./img/plazma.png" alt="">
 				<br></br>
-				<h2>Technologies</h2>
 				<img class="technology" src="./img/d3.png" alt="">
 				<img class="technology" src="./img/js.png" alt="">
 				<img class="technology" src="./img/webpack.svg" alt="">
