--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 <li>
 	<div>
 		<h2>Find an odd ball</h2>
-		<p>There are 8 balls, same weight, and 1 heavier. Find the odd ball using the scales only twice.</p>
+		
 		<div class="effect1 card" >
 			<div class="part left">
 				<div id="buttons"></div>
@@ -93,8 +93,11 @@
 			</div>
 			<!-- ******************************* Place ships                   *********************************************** -->
 			<div class="part right">
-				<img class="technology" src="./img/d3.png" alt="">
-				<img class="technology" src="./img/js.png" alt="">
+				<p>There are 8 balls, same weight, and 1 heavier. Find the odd ball using the scales only twice.</p>
+				<div class="techHolder">
+					<img class="technology" src="./img/d3.png" alt="">
+					<img class="technology" src="./img/js.png" alt="">
+				</div>
 			</div>
 		</div>
 	</div>
@@ -103,7 +106,7 @@
 <li>
 	<div>
 		<h2>Battle ship</h2>
-		<p>Algorithm and visuals to efficiently find ships.</p>
+		
 		<div class="effect1 card">
 			<div class="part left">
 				<div class="bkg"></div>
@@ -115,15 +118,18 @@
 			</div>
 			<!-- ******************************* Place ships                   *********************************************** -->
 			<div class="part right">
-				<span style="float: left">Low probability</span><span style="float: right">High probability</span>
+				<p>Algorithm and visuals to efficiently find ships.</p>
+				<br></br>
 				<br></br>
 				<img class="interpolate" src="./img/plazma.png" alt="">
-				<br></br>
-				<img class="technology" src="./img/d3.png" alt="">
-				<img class="technology" src="./img/js.png" alt="">
-				<img class="technology" src="./img/webpack.svg" alt="">
-				<img class="technology" src="./img/react.svg" alt="">
-				<img class="technology" src="./img/redux.png" alt="">
+				<span style="float: left">Low probability</span><span style="float: right">High probability</span>
+				<div class="techHolder">
+					<img class="technology" src="./img/d3.png" alt="">
+					<img class="technology" src="./img/js.png" alt="">
+					<img class="technology" src="./img/webpack.svg" alt="">
+					<img class="technology" src="./img/react.svg" alt="">
+					<img class="technology" src="./img/redux.png" alt="">
+				</div>
 			</div>
 			
 		</div>
